Fix overflow problem

--- a/docs/docusaurus/src/css/custom.scss
+++ b/docs/docusaurus/src/css/custom.scss
@@ -91,8 +91,8 @@
     
 }
 
-.main-wrapper {
-  overflow-x: hidden;
+.main-wrapper > div:has(#gxCard) {
+    overflow-x: hidden;
 }
 
 p > a {
